--- a/media/style.css
+++ b/media/style.css
@@ -129,7 +129,9 @@ body {
     color: #727373;
     color: #483318;
     width: 40em;
-    margin: 20px auto 0;
+    margin: 0 auto 20px;
+    padding: 20px 0 0;
+    border-top: 8px solid;
     font-size: 18px;
     line-height: 24px;
     font-family: Droid, Georgia, serif;
