--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/media/style.css">
+    <link rel="stylesheet" href="/media/syntax.css">
     <link rel="alternate" type="application/atom+xml"
           href="http://feeds.feedburner.com/lonnen"
           title="Feed of latest posts">
