--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/media/style.css">
     <link rel="stylesheet" href="/media/syntax.css">
     <link rel="alternate" type="application/atom+xml"
-          href="http://feeds.feedburner.com/lonnen"
+          href="http://feeds.feedburner.com/additionMod2"
           title="Feed of latest posts">
   </head>
   <body>
