--- a/media/style.css
+++ b/media/style.css
@@ -169,6 +169,9 @@ p + p,
 
 code {
     font-family: Inconsolata, monospace;
+    background-color: rgb(248, 248, 255);
+    border: 1px solid rgb(221, 221, 221);
+    padding: 3px;
 }
 
 pre {
