first attempt at a footer

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -17,6 +17,18 @@
       toggle = function(){ document.body.classList.toggle('grid'); return false; }
     </script>
     -->
+    <footer>
+      <div class="contact">
+
+      </div>
+      <div class="contact">
+      </div>
+      <div class="rss">
+          <a href="http://feeds.feedburner.com/additionMod2">
+            <img src="media/rss.png" alt="Quality syndication at last!" />
+          </a>
+      </div>
+    </footer>
     <script defer src="/media/script.js?x"></script>
   </body>
 </html>
