--- a/media/style.css
+++ b/media/style.css
@@ -250,3 +250,22 @@ pre {
     padding: .2em;
     border: 1px dashed rgb(72, 51, 24);
 }
+
+footer {
+    font-size: 80%;
+    color: rgb(102, 102, 102);
+    border-top: 4px solid;
+    margin-top: 2em;
+    overflow: hidden;
+}
+
+.contact {
+    float:left;
+    margin-right: 3em;
+}
+
+.rss {
+    margin-top: 1.1em;
+    margin-right: -0.2em;
+    float: right;
+}
