--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -17,7 +17,7 @@
       toggle = function(){ document.body.classList.toggle('grid'); return false; }
     </script>
     -->
-    <footer>
+    <section class="footer">
       <div class="contact">
 
       </div>
@@ -28,7 +28,7 @@
             <img src="media/rss.png" alt="Quality syndication at last!" />
           </a>
       </div>
-    </footer>
+    </section>
     <script defer src="/media/script.js?x"></script>
   </body>
 </html>
