fixed line breaks, list prepend

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -19,9 +19,22 @@
     -->
     <section class="footer">
       <div class="contact">
-
+        <p>
+          Chris Lonnen
+          <br />
+          Knight Errant at <a href="http://www.mozilla.org">Mozilla</a>
+          <br />
+          lonnen@mozilla.com
+        </p>
       </div>
       <div class="contact">
+        <p>
+          <a href="http://github.com/Lonnen/">github.com/Lonnen</a>
+          <br />
+          <a href="http://twitter.com/lonnen/">twitter.com/lonnen</a>
+          <br />
+          <a href="http://app.noodletalk.org/user/lonnen">app.noodletalk.org/user/lonnen</a>
+        </p>
       </div>
       <div class="rss">
           <a href="http://feeds.feedburner.com/additionMod2">
