relative img url

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -38,7 +38,7 @@
       </div>
       <div class="rss">
           <a href="http://feeds.feedburner.com/additionMod2">
-            <img src="media/rss.png" alt="Quality syndication at last!" />
+            <img src="/media/rss.png" alt="Quality syndication at last!" />
           </a>
       </div>
     </section>
