--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -33,7 +33,7 @@
           <br />
           <a href="http://twitter.com/lonnen/">twitter.com/lonnen</a>
           <br />
-          <a href="http://app.noodletalk.org/user/lonnen">app.noodletalk.org/user/lonnen</a>
+          <a href="https://github.com/lonnen/feedback#readme">lonnen/feedback</a>
         </p>
       </div>
       <div class="rss">
