--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -36,6 +36,9 @@
           <a href="https://github.com/lonnen/feedback#readme">lonnen/feedback</a>
         </p>
       </div>
+      <div class="idl">
+          <a href="http://internetdefenseleague.org"><img src="http://internetdefenseleague.org/images/badges/final/shield_badge.png" alt="Proud Member of The Internet Defense League" /></a>
+      </div>
       <div class="rss">
           <a href="http://feeds.feedburner.com/additionMod2">
             <img src="/media/rss.png" alt="Quality syndication at last!" />
@@ -43,5 +46,17 @@
       </div>
     </section>
     <script defer src="/media/script.js?x"></script>
+    <!-- internet defense league banner -->
+    <script type="text/javascript">
+    window._idl = {};
+    _idl.variant = "banner";
+    (function() {
+        var idl = document.createElement('script');
+        idl.type = 'text/javascript';
+        idl.async = true;
+        idl.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'members.internetdefenseleague.org/include/?url=' + (_idl.url || '') + '&campaign=' + (_idl.campaign || '') + '&variant=' + (_idl.variant || 'banner');
+        document.getElementsByTagName('body')[0].appendChild(idl);
+    })();
+    </script>
   </body>
 </html>
