--- a/media/style.css
+++ b/media/style.css
@@ -73,6 +73,17 @@ table {
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'SourceSansProRegular';
+    src: url('SourceSansPro-Regular-webfont.eot');
+    src: url('SourceSansPro-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('SourceSansPro-Regular-webfont.woff') format('woff'),
+         url('SourceSansPro-Regular-webfont.ttf') format('truetype'),
+         url('SourceSansPro-Regular-webfont.svg#SourceSansProRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
     font-weight: normal;
     color: #727373;
@@ -82,7 +93,7 @@ body {
     padding: 20px 0 0;
     border-top: 8px solid;
     line-height: 24px;
-    font-family: "Helvetica Neue", Helvetica, sans-serif;
+    font-family: SourceSansProRegular, Helvetica, sans-serif;
 }
 
 body.grid {
