--- a/media/style.css
+++ b/media/style.css
@@ -105,6 +105,7 @@ body.grid {
 h1, h2, h3, h4, h5, h6 {
     font-weight: normal;
     font-family: "Helvetica Neue", Helvetica, sans-serif;
+    margin: 30px 0;
 }
 
 section, header {
