--- a/media/style.css
+++ b/media/style.css
@@ -18,8 +18,11 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 	vertical-align: baseline;
 	background: transparent;
 }
-ol, ul {
+ul {
     list-style-type: none;
+}
+ol {
+    margin-left: 20px;
 }
 blockquote, q {
 	quotes: none;
@@ -103,7 +106,6 @@ body.grid {
 /** Headings **/
 
 h1, h2, h3, h4, h5, h6 {
-    font-weight: normal;
     font-family: "Helvetica Neue", Helvetica, sans-serif;
     margin: 30px 0;
 }
