--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,14 +2,13 @@
 layout: base
 ---
 <article>
-  <header>
+  <section id="page-header">
     <h1>{{ page.title }}</h1>
-    <div class="byline">
+    {{ post.content }}
       <time datetime="{{ page.date|date:"%Y-%m-%d" }}">
         {{ page.date|date:"%B %d, %Y" }}
       </time>
       by <address><a href="http://lonnen.github.com">Chris Lonnen</a></address>
-    </div>
-  </header>
+  </section>
   {{ content }}
 </article>
