switch to lighter color scheme, adjust gross spacing on frontpage

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -10,15 +10,17 @@
           title="Feed of latest posts">
   </head>
   <body>
-  <div class="container">
-    <header>
+  <header>
+    <div class="container">
         <ul>
           <li class="logo"><a href="#">XOR</a></li>
           <li><a href="#">about</a></li>
           <li><a href="#">missives</a></li>
           <li><a href="#">contact</a></li>
         </ul>
-    </header>
+    </div>
+  </header>
+  <div class="container">
 
     {{ content }}
 
@@ -28,8 +30,6 @@
           Chris Lonnen
           <br />
           Knight Errant at <a href="http://www.mozilla.org">Mozilla</a>
-          <br />
-          lonnen@mozilla.com
         </p>
       </div>
       <div class="contact">
@@ -37,8 +37,6 @@
           <a href="http://github.com/Lonnen/">github.com/Lonnen</a>
           <br />
           <a href="http://twitter.com/lonnen/">twitter.com/lonnen</a>
-          <br />
-          <a href="https://github.com/lonnen/feedback#readme">lonnen/feedback</a>
         </p>
       </div>
       <div class="idl">
