--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,13 +2,9 @@
 layout: base
 ---
 <article>
-  <section id="page-header">
-    <h1>{{ page.title }}</h1>
-    {{ post.content }}
-      <time datetime="{{ page.date|date:"%Y-%m-%d" }}">
-        {{ page.date|date:"%B %d, %Y" }}
-      </time>
-      by <address><a href="http://lonnen.github.com">Chris Lonnen</a></address>
-  </section>
+  <h1><a href="{{ page.link }}">{{ page.title }}</a></h1>
+  <time datetime="{{ page.date|date:"%Y-%m-%d" }}">
+    {{ page.date|date:"%B %d, %Y" }}
+  </time>
   {{ content }}
 </article>
