--- a/media/style.css
+++ b/media/style.css
@@ -89,7 +89,7 @@ body {
     font-weight: normal;
     color: #483318;
     border-top: 3px solid #3A8AD3;
-    font-size: 17px;
+    font-size: 18px;
     line-height: 30px;
     font-family: SourceSansProRegular, Helvetica, sans-serif;
 }
@@ -107,15 +107,21 @@ h1, h2, h3, h4, h5, h6 {
     margin: 20px 0 10px 0;
 }
 
+h1 {
+    font-family: Georgia, "Times New Roman", Times, serif;
+    font-size: 28px;
+    color: #332411;
+}
+
 address {
     display: inline;
     font-style: normal;
 }
 
-/** Articles & Sections **/
+/** Articles **/
 
 header {
-    margin: 0 0 20px 0;
+    margin: 0 0 50px 0;
     font-family: "Futura", sans-serif;
     font-size: 14px;
     text-transform: uppercase;
@@ -161,36 +167,29 @@ header a:hover {
 #intro {
     font-size: 26px;
     line-height: 1.2;
-    margin: 50px 30px;
+    margin: 0 30px 50px 30px;
 }
 
-
-article > #page-header {
-    margin-bottom: 24px;
+article h1 {
+    font-size: 36px;
 }
 
-section h1 {
-    font-family: Georgia, "Times New Roman", Times, serif;
-    font-size: 28px;
-    color: #332411;
-}
-
-article #page-header h1 {
-    margin: 5px 0;
-}
-
-section {
-    margin-bottom: 18px;
-}
-
-article #page-header h1 time {
-    line-height: 24px;
-    font-size: 14px;
-    color: #555;
+article time {
+    font-size: 20px;
+    color: #333333;
+    margin: 12px 0;
+    display: block;
 }
 
 article h2 {
     font-size: 22px;
+    text-shadow:
+        -1px -1px 0 #fff,
+        1px -1px 0 #fff,
+        -1px 1px 0 #fff,
+        1px 1px 0 #fff;
+    padding: 0 0 -2px 0;
+    border-bottom: 1px solid #333333;
 }
 
 /** Links **/
@@ -263,6 +262,7 @@ pre {
     margin: 16px 0;
 }
 
+#page-header time,
 #posts time {
     text-transform: uppercase;
     font-size: 13px;
@@ -273,12 +273,19 @@ pre {
 
 #posts .post-content,
 #posts .post-summary {
-    font-size: 16px;
+    font-size: 18px;
 }
 
 /* newline at end of .md file always results in an empty p tag */
 .link p:last-of-type {
     margin: 0;
+}
+
+/** article page **/
+
+#page-header time {
+    font-size: 18px;
+    margin: 150px 0;
 }
 
 .gist-highlight {
