add static pages
Add about, missives, speaking pages. Adds post types and some other supporting markup.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -13,10 +13,10 @@
   <header>
     <div class="container">
         <ul>
-          <li class="logo"><a href="#">XOR</a></li>
-          <li><a href="#">about</a></li>
-          <li><a href="#">missives</a></li>
-          <li><a href="#">contact</a></li>
+          <li class="logo"><a href="/">XOR</a></li>
+          <li><a href="/about">about</a></li>
+          <li><a href="/missives">missives</a></li>
+          <li><a href="/speaking">speaking</a></li>
         </ul>
     </div>
   </header>
