--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -11,14 +11,12 @@
   </head>
   <body>
   <header>
-    <div class="container">
-        <ul>
-          <li class="logo"><a href="/">XOR</a></li>
-          <li><a href="/about">about</a></li>
-          <li><a href="/missives">missives</a></li>
-          <li><a href="/speaking">speaking</a></li>
-        </ul>
-    </div>
+      <ul class="container">
+        <li class="logo"><a href="/">XOR</a></li>
+        <li><a href="/about">about</a></li>
+        <li><a href="/missives">missives</a></li>
+        <li><a href="/speaking">speaking</a></li>
+      </ul>
   </header>
   <div class="container">
 
