--- a/media/style.css
+++ b/media/style.css
@@ -1,21 +1,3 @@
-/**
- * color pallette
- *  http://www.colourlovers.com/palette/1561495/399_cool_guys_:%29
- *
- * #FB6F24 - warning highlight
- * #8CA315 - neutral highlight
- * #5191C1 - light
- * #1E6495 - mid
- * #0A4B75 - dark
- *
- */
-
-/**
- * http://meyerweb.com/eric/tools/css/reset/
- * v2.0 | 20110126
- * License: none (public domain)
- */
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -29,61 +11,17 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+ margin: 0;
+ padding: 0;
+ border: 0;
+ font-size: 100%;
+ font: inherit;
+ vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-/**
- * Normal stying.
- */
-
-@font-face {
-    font-family: "LiberationMonoRegular", sans-serif;
-    src: url('LiberationMono-Regular-webfont.eot');
-    src: url('LiberationMono-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('LiberationMono-Regular-webfont.woff') format('woff'),
-         url('LiberationMono-Regular-webfont.ttf') format('truetype'),
-         url('LiberationMono-Regular-webfont.svg#LiberationMonoRegular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'UbuntuMonoRegular';
-    src: url('UbuntuMono-R-webfont.eot');
-    src: url('UbuntuMono-R-webfont.eot?#iefix') format('embedded-opentype'),
-         url('UbuntuMono-R-webfont.woff') format('woff'),
-         url('UbuntuMono-R-webfont.ttf') format('truetype'),
-         url('UbuntuMono-R-webfont.svg#UbuntuMonoRegular') format('svg');
-    font-weight: normal;
-    font-style: normal;
+ display: block;
 }
 
 @font-face {
@@ -98,303 +36,34 @@ table {
 }
 
 body {
-    font-weight: normal;
-    color: #483318;
-    border-top: 3px solid #1E6495;
-    font-size: 18px;
-    line-height: 30px;
-    font-family: SourceSansProRegular, Helvetica, sans-serif;
+ background: url(https://source.unsplash.com/category/nature/) no-repeat center center fixed;
+ background-size: cover;
+
+ font-family: SourceSansProRegular, Helvetica, sans-serif;
+ font-size: 21px;
+
+ line-height: 1;
+ text-align: center;
+
+ color: white;
 }
 
-.container {
-    min-width: 320px;
-    max-width: 700px;
-    margin: 0 auto;
+div {
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ align-items: center;
+ height:100vh;
+
+ background-color: rgba(0,0,0,0.2);
 }
 
-@media all and (max-width: 700px) {
-    body > .container > *  {
-        padding-left: 4px;
-        padding-right: 4px;
-    }
-}
-
-/** Headings **/
-
-h1, h2, h3, h4, h5, h6 {
-    font-family: "Futura", sans-serif;
-    font-weight: bold;
-    margin: 20px 0 10px 0;
-}
 
 h1 {
-    font-family: Georgia, "Times New Roman", Times, serif;
-    font-size: 28px;
-    color: #332411;
+ font-size: 82px;
 }
-
-address {
-    display: inline;
-    font-style: normal;
-}
-
-/** Articles **/
-
-header {
-    margin: 0 0 50px 0;
-    font-family: "Futura", sans-serif;
-    font-size: 14px;
-    text-transform: uppercase;
-    font-weight: 600;
-    background-color: #dddddd;
-    border-bottom: 1px #aaaaaa solid;
-}
-
-header ul {
-    display: flex;
-    flex-flow: row wrap;
-    list-style: none;
-}
-
-header li {
-    flex: 1 auto;
-}
-
-header a,
-header a:visited {
-    text-decoration: none;
-    display: block;
-    text-align: center;
-    padding: 10px;
-    color: #333333;
-}
-
-header a:hover {
-    text-decoration: none;
-    background: #eeeeee;
-    color: #0A4B75;
-    border-bottom: 1px #0A4B75 solid;
-}
-
-.logo a {
-    flex: 1 100%;
-    color: #ffffff !important;
-    background-color: #1E6495;
-    font-weight: 800;
-    font-size: 18px;
-    border-bottom: 1px #0A4B75 solid;
-}
-
-.logo a:hover {
-    color: #1E6495 !important;
-    backgound: #444444;
-}
-
-@media all and (min-width: 620px) {
-    header li {
-        flex: auto;
-    }
-}
-
-#intro {
-    font-size: 26px;
-    line-height: 1.2;
-    margin: 0 30px 50px 30px;
-}
-
-.container h1 {
-    font-size: 36px;
-}
-
-article time {
-    font-size: 20px;
-    color: #333333;
-    margin: 12px 0;
-    display: block;
-}
-
-article h2 {
-    font-size: 22px;
-    margin: 20px 0 15px 0;
-}
-
-/** Links **/
 
 a {
-    color: #1E6495;
-    text-decoration: none;
-}
-
-a:hover {
-    color: #5191C1;
-}
-
-a:visited {
-    color: #1E6495;
-}
-
-/** Lists **/
-
-p + ul {
-    margin: 12px;
-	list-style: square;
-    list-style-position: inside;
-}
-
-/** Misc **/
-
-blockquote {
-    color: rgba(72, 51, 24, .6);
-    padding: .6em;
-}
-
-h1 + p,
-p + p,
-blockquote + p,
-.gist {
-    margin-top: 18px;
-}
-
-code {
-    font-family: UbuntuMonoRegular, monospace;
-    background-color: rgb(248, 248, 255);
-    border: 1px solid rgb(221, 221, 221);
-    padding: 2px;
-}
-
-pre {
-    margin: 8px 0 8px 2em;
-    font-size: 14px;
-    line-height: 16px;
-    margin-left: 2em;
-}
-
-/** Homepage **/
-
-#posts {
-    font-size: 13px;
-}
-
-#posts ul {
-    text-indent: 0;
-}
-
-#posts ul li:before {
-    content: none;
-}
-
-#posts ul li {
-    margin: 50px 0;
-}
-
-#posts h1 {
-    margin: 16px 0;
-}
-
-#page-header time,
-#posts time {
-    text-transform: uppercase;
-    font-size: 13px;
-    font-weight: 300;
-    color: #CCCCCC;
-    margin: 2px 8px 0 4px;
-}
-
-#posts .post-content,
-#posts .post-summary {
-    font-size: 18px;
-}
-
-.post:last-of-type{
-    margin-bottom: 0 !important;
-}
-
-#more-posts {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    font-size: 20px;
-}
-
-#more-posts a {
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    padding: 8px;
-}
-
-#more-posts a:hover {
-    background: #eeeeee;
-}
-
-/* newline at end of .md file always results in an empty p tag */
-.link p:last-of-type {
-    margin: 0;
-}
-
-/** article page **/
-
-#page-header time {
-    font-size: 18px;
-    margin: 150px 0;
-}
-
-.gist-highlight {
-    border-left: 3ex solid #eee;
-    position: relative;
-}
-
-.gist-highlight pre {
-    counter-reset: linenumbers;
-}
-
-.gist-highlight pre div:before {
-    color: #aaa;
-    content: counter(linenumbers);
-    counter-increment: linenumbers;
-    left: -3ex;
-    position: absolute;
-    text-align: right;
-    width: 2.5ex;
-}
-
-.footer {
-    font-size: 80%;
-    color: rgb(102, 102, 102);
-    border-top: 4px solid;
-    margin-top: 14px;
-    overflow: hidden;
-    padding-top: 10px;
-}
-
-.contact {
-    float:left;
-    margin-right: 3em;
-}
-
-.rss {
-    margin-top: 0.4em;
-    margin-right: 0.4em;
-    float: right;
-}
-
-.idl {
-    margin-top: 0.4em;
-    float: right;
-}
-
-.rss img {
-    height: 4em;
-}
-
-.idl img {
-    height: 5em;
-    margin-top: -0.5em;
-}
-
-.gist .gist-file .gist-data pre {
-    line-height: 20px;
-}
-.gist .gist-file .gist-data .line_numbers span {
-    line-height: 20px;
+ color: white;
+ text-decoration: none;
 }
