update background to gradient
unsplash has changed its api, so we can no longer pull random photos. changing it to use a gross gradient for now.

later we can use github actions to cycle around different backgrounds. We could use the new unsplash api and grab some photos, or just write a procedural gradient generator

--- a/media/style.css
+++ b/media/style.css
@@ -36,8 +36,8 @@ footer, header, hgroup, menu, nav, section {
 }
 
 body {
- background: url(https://source.unsplash.com/category/nature/) no-repeat center center fixed;
- background-size: cover;
+ background: rgb(40,42,54);
+ background: linear-gradient(90deg, rgba(40,42,54,1) 0%, rgba(96,65,52,1) 100%);
 
  font-family: SourceSansProRegular, Helvetica, sans-serif;
  font-size: 21px;
