--- a/media/style.css
+++ b/media/style.css
@@ -37,7 +37,7 @@ footer, header, hgroup, menu, nav, section {
 
 body {
  background: rgb(40,42,54);
- background: linear-gradient(90deg, rgba(40,42,54,1) 0%, rgba(96,65,52,1) 100%);
+ background: linear-gradient(180deg, rgb(40, 42, 54) 0%, rgba(43,42,51) 100%)
 
  font-family: SourceSansProRegular, Helvetica, sans-serif;
  font-size: 21px;
